Extracted neighborhood and warp classes
These singleton classes only have the purpose to get neighboring
positions and apply wrapping, making their function much easier to
understand.